feat: agregar esquema de solicitud de creación de nodos y parámetros de seguridad en la API
